--- a/AppCausati/Views/ExplorarPage.xaml
+++ b/AppCausati/Views/ExplorarPage.xaml
@@ -2,6 +2,12 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppCausati.Views.ExplorarPage">
+    <Shell.TitleView>
+        <StackLayout >
+            <Image Source="logo_small.png" WidthRequest="175" HorizontalOptions="Center" Margin="0,10,0,0"/>
+        </StackLayout>
+    </Shell.TitleView>
+
     <ContentPage.Content>
         <ScrollView>
             <StackLayout Grid.Column="0" WidthRequest="325" HeightRequest="28" HorizontalOptions="Center" Margin="0,0,0,0">
