--- a/AppCausati/Views/RegisterPage.xaml
+++ b/AppCausati/Views/RegisterPage.xaml
@@ -2,7 +2,12 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppCausati.Views.RegisterPage"
-             BackgroundColor="White">
+             BackgroundColor="White"
+              xmlns:vm="clr-namespace:AppCausati.ViewModels"
+             Visual="Material">
+    <ContentPage.BindingContext>
+        <vm:LoginViewModel/>
+    </ContentPage.BindingContext>
     <ContentPage.Content>
         <StackLayout Padding="29" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
 
@@ -40,24 +45,24 @@
             </StackLayout>
 
 
-            <StackLayout VerticalOptions="CenterAndExpand">
+            <!-- StackLayout VerticalOptions="CenterAndExpand">
                 <ScrollView>
 
-                    <Entry x:Name="txtNombre" Placeholder="Nombres y Apellidos" Keyboard="Text" Text="{Binding NameTxt, Mode=TwoWay}" IsEnabled="{Binding IsEnabledTxt}"></Entry>
+                    <Entry  Placeholder="Usuario" Keyboard="Text" Text="{Binding NameTxt, Mode=TwoWay}" IsEnabled="{Binding IsEnabledTxt}"></Entry>
+
+                </ScrollView>
+            </StackLayout> -->
+            <StackLayout VerticalOptions="StartAndExpand">
+                <ScrollView>
+
+                    <Entry  Placeholder="usuario"  Text="{Binding Username}"></Entry>
 
                 </ScrollView>
             </StackLayout>
             <StackLayout VerticalOptions="StartAndExpand">
                 <ScrollView>
 
-                    <Entry x:Name="txtEmail" Placeholder="usuario@gmail.com" AutomationId="Email" Keyboard="Email" Text="{Binding EmailTxt, Mode=TwoWay}" IsEnabled="{Binding IsEnabledTxt}"></Entry>
-
-                </ScrollView>
-            </StackLayout>
-            <StackLayout VerticalOptions="StartAndExpand">
-                <ScrollView>
-
-                    <Entry x:Name="txtContrasena" Placeholder="********************" IsPassword="True" Text="{Binding PasswordTxt, Mode=TwoWay}" IsEnabled="{Binding IsEnabledTxt}"></Entry>
+                    <Entry  Placeholder="Password" IsPassword="True" Text="{Binding Password}"></Entry>
 
                 </ScrollView>
             </StackLayout>
@@ -84,8 +89,7 @@
                     HeightRequest="52"
                     WidthRequest="1400"
                     CornerRadius="30" Padding="10"
-                    x:Name="btnEegistrar"
-                    Clicked="BtnRegistrar_Clicked"/>
+                    Command="{Binding RegisterCommand}"/>
 
 
             <Button
